roles/k8s_casdoor/files/casdoor_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: casdoor-system
