roles/k8s_casdoor/files/casdoor_service.yml
apiVersion: v1
kind: Service
metadata:
  name: casdoor-http
  namespace: casdoor-system
  labels:
    app: casdoor
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: casdoor
