roles/k8s_casdoor/files/casdoor_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-casdoor
  namespace: casdoor-system
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: casdoor.hitesh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: casdoor-http
            port:
              number: 8000
  ingressClassName: nginx
